--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 35
 
     defaultConfig {
         applicationId "tech.bogomolov.incomingsmsgateway"
         minSdkVersion 14
-        targetSdkVersion 33
+        targetSdkVersion 35
         versionCode 12
+
         versionName "2.3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,6 +23,7 @@ android {
     compileOptions {
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'tech.bogomolov.incomingsmsgateway'
 
 }
 
